# rbcn22de-visual-document-testing

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  README.md  pyproject.toml  requirements.txt
testdata/masks/: mask_invoice.json  mask_invoice_amounts.json  mask_invoice_date.json
testdata/payload/: invoice.html  invoice_diff_date.html  invoice_diffamounts.html  invoice_moved_text.html  invoice_nologo.html
tests/: 01_simple_images_and_masks.robot  02_invoices_masks_movetolerance copy.robot  02_invoices_masks_movetolerance.robot  03_watermarks_and_content.robot  04_pdf_content.robot  05_printjobs.robot  beach.robot  compare.robot  convert.py  invoices.robot  pdf_content.robot  printjobs.robot
tests/webbrowser/: browser.robot
utilities/: TableModel.py  TestResultEvaluator.py  TestResultParser.py  convert.py  evaluator_sample.robot  evaluator_sample.xlsx  image_modifier.py  requirements.txt
utilities/reference/: create_testdata.py
