[tool.poetry]
name = "visual-document-testing"
version = "0.1.0"
description = ""
authors = ["Many Kasiriha <many.kasiriha@dbschenker.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
robotframework-doctestlibrary = "*"
weasyprint = "52.5"
PyQt5 = "^5.15.7"
robotframework-datadriver = "^1.6.1"
pandas = "*"
xlrd = ">=1.2.0"
openpyxl = "*"
robotframework-pabot = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"